--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="please_enter_name">Please enter name</string>
     <string name="search">Search</string>
     <string name="no_records">No Records!</string>
+    <string name="hint_select_date">Select Date</string>
 </resources>
