--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="hint_total_record">Total Record</string>
     <string name="text_add_records">Add Records</string>
     <string name="label_users">Users</string>
+    <string name="no_users">No Users!</string>
 </resources>
